WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120025
REGRESSION (
r154254
): fast/frames/frameset-frameborder-inheritance.html failing on Apple MountainLion Debug WK1 (Tests)
https://bugs.webkit.org/show_bug.cgi?id=120025
Summary
REGRESSION (r154254): fast/frames/frameset-frameborder-inheritance.html faili...
Jer Noble
Reported
2013-08-19 13:44:13 PDT
fast/frames/frameset-frameborder-inheritance.html started failing on Apple MountainLion Debug WK1 (Tests) in
r154254
<
http://trac.webkit.org/changeset/154254
>.
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r154253%20(9512)/results.html
passed
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r154254%20(9513)/results.html
failed
Attachments
patch
(8.45 KB, patch)
2013-08-20 07:46 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
slightly better patch
(8.70 KB, patch)
2013-08-20 08:11 PDT
,
Antti Koivisto
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-08-19 13:48:28 PDT
Marked test as failing in <
https://webkit.org/b/120025
>.
Antti Koivisto
Comment 2
2013-08-20 07:46:11 PDT
Created
attachment 209195
[details]
patch
Antti Koivisto
Comment 3
2013-08-20 08:11:24 PDT
Created
attachment 209198
[details]
slightly better patch
Antti Koivisto
Comment 4
2013-08-20 08:24:15 PDT
https://trac.webkit.org/r154326
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug