<https://webkit.org/b/120025> REGRESSION (r154254): fast/frames/frameset-frameborder-inheritance.html failing on Apple MountainLion Debug WK1 (Tests)

Reviewed by Anders Carlsson.

Source/WebCore:

* html/HTMLDocument.cpp:
(WebCore::HTMLDocument::isFrameSet):
* html/HTMLFrameElement.cpp:
(WebCore::HTMLFrameElement::didAttachRenderers):

    Make helper public in HTMLFrameSetElement.

* html/HTMLFrameSetElement.cpp:
(WebCore::HTMLFrameSetElement::findContaining):

    Static function for finding containing frameset, if any.

(WebCore::HTMLFrameSetElement::willAttachRenderers):

    This broke in refactoring. We should exit the loop when the first containing frameset is found. Fix by refactoring more.

* html/HTMLFrameSetElement.h:
(WebCore::isHTMLFrameSetElement):
(WebCore::toHTMLFrameSetElement):

    Add casting functions.

* rendering/RenderFrameSet.cpp:
(WebCore::RenderFrameSet::frameSet):

LayoutTests:

* platform/mac/TestExpectations: Unskip.



Canonical link: https://commits.webkit.org/137993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154326 268f45cc-cd09-0410-ab3c-d52691b4dbfc