Source/WebCore/html/HTMLFrameElement.cpp
@@ -59,15 +59,6 @@ RenderObject* HTMLFrameElement::createRenderer(RenderArena* arena, RenderStyle*)
     return new (arena) RenderFrame(this);
 }
 
-static inline HTMLFrameSetElement* containingFrameSetElement(Node* node)
-{
-    while ((node = node->parentNode())) {
-        if (node->hasTagName(framesetTag))
-            return static_cast<HTMLFrameSetElement*>(node);
-    }
-    return 0;
-}
-
 bool HTMLFrameElement::noResize() const
 {
     return hasAttribute(noresizeAttr);
@@ -76,10 +67,11 @@ bool HTMLFrameElement::noResize() const
 void HTMLFrameElement::didAttachRenderers()
 {
     HTMLFrameElementBase::didAttachRenderers();
-    if (HTMLFrameSetElement* frameSetElement = containingFrameSetElement(this)) {
-        if (!m_frameBorderSet)
-            m_frameBorder = frameSetElement->hasFrameBorder();
-    }
+    const HTMLFrameSetElement* containingFrameSet = HTMLFrameSetElement::findContaining(this);
+    if (!containingFrameSet)
+        return;
+    if (!m_frameBorderSet)
+        m_frameBorder = containingFrameSet->hasFrameBorder();
 }
 
 void HTMLFrameElement::parseAttribute(const QualifiedName& name, const AtomicString& value)
